unpackaged/main/default/objects/Quote/fields/Account_Super_User__c.field-meta.xml
<CustomField>
    <fullName>Account_Super_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will look up the contact that is the account super user for that specific supplier.</description>
    <label>Account Super User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>