unpackaged/main/default/objects/Quote/fields/Contract_end_date__c.field-meta.xml
<CustomField>
    <fullName>Contract_end_date__c</fullName>
    <formula>Opportunity.Contract_end_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract end date</label>
    <type>Date</type>
</CustomField>