unpackaged/main/default/objects/Quote/fields/Contract_length_in_months__c.field-meta.xml
<CustomField>
    <fullName>Contract_length_in_months__c</fullName>
    <formula>Opportunity.Contract_length_in_months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract length (months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>