unpackaged/main/default/objects/Quote/fields/ContractNumberAuto__c.field-meta.xml
<CustomField>
    <fullName>ContractNumberAuto__c</fullName>
    <description>Mirrors the Quote Number but with a different label</description>
    <formula>QuoteNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Number</label>
    <type>Text</type>
</CustomField>