unpackaged/main/default/objects/Quote/fields/Customer_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Billing_Contact__c</fullName>
    <label>Billing Contact</label>
    <type>Email</type>
</CustomField>