unpackaged/main/default/objects/Quote/fields/DocuSign_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Status_Formula__c</fullName>
    <description>The purpose of this field is to copy the value for DocuSign into a custom field so it is useable in a process builder.</description>
    <formula>DocuSign_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DocuSign Status Formula</label>
    <type>Text</type>
</CustomField>