unpackaged/main/default/objects/Quote/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <description>This field is used to generate the invoice number which is displayed on the invoice.</description>
    <label>Invoice No.</label>
    <type>AutoNumber</type>
</CustomField>