unpackaged/main/default/objects/Quote/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <label>Invoice Number</label>
    <type>TextArea</type>
</CustomField>