unpackaged/main/default/objects/Quote/fields/Invoice_Tax_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Tax_Date__c</fullName>
    <description>This field is used for the invoice template.</description>
    <formula>Start_date_of_subscription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice/Tax Date</label>
    <type>Date</type>
</CustomField>