unpackaged/main/default/objects/Quote/fields/Invoice_Tax_DateTW__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Tax_DateTW__c</fullName>
    <label>Invoice/Tax Date</label>
    <type>Date</type>
</CustomField>