unpackaged/main/default/objects/Quote/fields/Invoice_TotalTW__c.field-meta.xml
<CustomField>
    <fullName>Invoice_TotalTW__c</fullName>
    <formula>TotalPrice + Total_Vat_Amountv2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>