unpackaged/main/default/objects/Quote/fields/IsDocusign__c.field-meta.xml
<CustomField>
    <fullName>IsDocusign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Docusign?</label>
    <type>Checkbox</type>
</CustomField>