unpackaged/main/default/objects/Quote/fields/IsHardCopyPOProvided__c.field-meta.xml
<CustomField>
    <fullName>IsHardCopyPOProvided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signifies if a Hard Copy Purchase Order will be provided by the customer (Generally to be completed via Docusign)</description>
    <inlineHelpText>Will a Hard Copy Purchase Order be provided by the customer (to be completed by the customer)</inlineHelpText>
    <label>Hard Copy PO Provided?</label>
    <type>Checkbox</type>
</CustomField>