unpackaged/main/default/objects/Quote/fields/Number_of_sites__c.field-meta.xml
<CustomField>
    <fullName>Number_of_sites__c</fullName>
    <description>This field is used to determine how many sites have been purchased for this specific supplier for their enerjyhub subscription.</description>
    <label>Number of sites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>