unpackaged/main/default/objects/Quote/fields/PreviousPurchaseOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>PreviousPurchaseOrderNumber__c</fullName>
    <label>Previous Purchase Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>