unpackaged/main/default/objects/Quote/fields/Purchase_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_No__c</fullName>
    <description>This field is used so that the customer can provide the PO number for their purchase.</description>
    <label>Purchase Order No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>