unpackaged/main/default/objects/Quote/fields/Sage_Account__c.field-meta.xml
<CustomField>
    <fullName>Sage_Account__c</fullName>
    <label>Sage Account :</label>
    <length>16</length>
    <type>Text</type>
</CustomField>