unpackaged/main/default/objects/Quote/fields/Start_date_of_subscription__c.field-meta.xml
<CustomField>
    <fullName>Start_date_of_subscription__c</fullName>
    <description>This date field is used to determine when the enerjyhub subscription of the supplier will start.</description>
    <label>Start date of subscription</label>
    <type>Date</type>
</CustomField>