unpackaged/main/default/objects/Quote/fields/SupplierAccountManagerEmail__c.field-meta.xml
<CustomField>
    <fullName>SupplierAccountManagerEmail__c</fullName>
    <label>Supplier Account Manager Email</label>
    <type>Email</type>
</CustomField>