unpackaged/main/default/objects/Quote/fields/SupplierAccountManagerFirstName__c.field-meta.xml
<CustomField>
    <fullName>SupplierAccountManagerFirstName__c</fullName>
    <label>Supplier Account Manager First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>