unpackaged/main/default/objects/Quote/fields/SupplierAccountManagerLastName__c.field-meta.xml
<CustomField>
    <fullName>SupplierAccountManagerLastName__c</fullName>
    <label>Supplier Account Manager Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>