unpackaged/main/default/objects/Quote/fields/SupplierAccountManagerTelephone__c.field-meta.xml
<CustomField>
    <fullName>SupplierAccountManagerTelephone__c</fullName>
    <label>Supplier Account Manager Telephone</label>
    <type>Phone</type>
</CustomField>