unpackaged/main/default/objects/Quote/fields/Total_VAT_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_VAT_Amount__c</fullName>
    <description>This field will calculate the total VAT Amount for the whole quote and display it on the invoice.</description>
    <label>Total VAT Amount</label>
    <summarizedField>QuoteLineItem.VAT_Amount_Placeholder__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>