unpackaged/main/default/objects/Quote/fields/Total_Vat_Amountv2__c.field-meta.xml
<CustomField>
    <fullName>Total_Vat_Amountv2__c</fullName>
    <formula>TotalPrice * Vat_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Vat Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>