unpackaged/main/default/objects/Quote/fields/VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Number__c</fullName>
    <label>VAT Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>