unpackaged/main/default/objects/Quote/fields/Vat_Rate__c.field-meta.xml
<CustomField>
    <fullName>Vat_Rate__c</fullName>
    <label>Vat Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>