unpackaged/main/default/objects/Quote/validationRules/Contact_not_assigned_on_Quote.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_not_assigned_on_Quote</fullName>
    <active>true</active>
    <description>Contact is not assigned on the Quote.</description>
    <errorConditionFormula>ISBLANK(ContactId)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Please assign a contact to the quote.</errorMessage>
</ValidationRule>