unpackaged/main/default/objects/Quote/validationRules/QUOTE_VR2_StartDateOfSubscription.validationRule-meta.xml
<ValidationRule>
    <fullName>QUOTE_VR2_StartDateOfSubscription</fullName>
    <active>true</active>
    <description>Start date of subscription must be completed in order for the quote to be marked as 'Accepted'.</description>
    <errorConditionFormula>AND(Opportunity.RecordType.Name = "enerjyhub Opportunities",
AND(ISPICKVAL(Status, "Accepted"),
ISBLANK(Start_date_of_subscription__c)))</errorConditionFormula>
    <errorDisplayField>Start_date_of_subscription__c</errorDisplayField>
    <errorMessage>You have not entered the Start Date of Subscription. Please enter the date.</errorMessage>
</ValidationRule>